<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:tools="http://schemas.android.com/tools">

    <!--标题-->
    <LinearLayout
        android:id="@+id/llTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:scaleType="center"
            android:src="@mipmap/icon_back"
            android:visibility="visible" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            tools:text="$500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:text="@string/login"
            android:textColor="@color/text_143551"
            android:textSize="18sp"
            android:visibility="visible" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/ibRegist"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:minWidth="48dp"
            android:text="@string/regist"
            android:textColor="#fff"
            android:textSize="14sp"
            android:visibility="visible" />

    </LinearLayout>

    <!--密码-->
    <LinearLayout
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/hint_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="115dp"
            android:text="@string/hint_pless_input_phone_password"
            android:textColor="@color/text_main_one_bg"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="35sp"
            android:background="#fff">

            <EditText
                android:id="@+id/phone_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#fff"
                android:hint="@string/phone_password"
                android:inputType="textPassword"
                android:minHeight="24dp"
                android:textColor="@color/text_main_one_bg"
                android:textColorHint="@color/text_hint_bg"
                android:textSize="21sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/stroke" />

        <TextView
            android:id="@+id/forget_pas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right|center"
            android:padding="10dp"
            android:text="@string/hint_forgot_password"
            android:textColor="@color/text_hint_bg"
            android:textSize="15sp" />

        <!--下一步-->
        <LinearLayout
            android:id="@+id/layout_forget_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="25dp"
            android:paddingTop="25dp">

            <Button
                android:id="@+id/password_forget_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg_cccccc_reid5"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>