<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--标题-->
    <LinearLayout
        android:id="@+id/llTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:scaleType="center"
            android:src="@mipmap/icon_back"
            android:visibility="visible" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:textColor="@color/text_143551"
            android:textSize="18sp"
            android:visibility="visible"
            tools:text="$500" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/ibRegist"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:minWidth="48dp"
            android:text="@string/regist"
            android:textColor="#fff"
            android:textSize="14sp"
            android:visibility="visible" />

    </LinearLayout>

    <!--验证码登录-->
    <LinearLayout
        android:id="@+id/phonecode_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/phone_code_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:text="@string/hint_pless_input_code"
            android:textColor="@color/text_main_one_bg"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/phone_hint_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/hint_pless_message_code"
            android:textColor="@color/text_hint_bg_two"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/phone_number_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textColor="@color/text_hint_bg_two"
            android:textSize="13sp"
            tools:text="+86 186******546" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/phone_hint_sixt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35sp"
                android:text="@string/hint_pless_input_code_siex"
                android:textColor="@color/text_hint_bg_two"
                android:textSize="13sp"
                android:gravity="left"
                />
            <TextView
                android:id="@+id/phone_code_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35sp"
                android:textColor="@color/text_hint_bg_two"
                android:textSize="13sp"
                android:gravity="right"
                android:text="@string/send_code"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="4dp"
            android:background="#fff">

            <app.gds.one.utils.customview.VerificationCodeView
                android:id="@+id/six_code"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                app:icv_et_bg_focus="@drawable/shape_icv_et_bg_focus"
                app:icv_et_bg_normal="@drawable/shape_icv_et_bg_normal"
                app:icv_et_divider_drawable="@drawable/shape_divider_identifying"
                app:icv_et_number="6"
                app:icv_et_pwd="false"
                app:icv_et_pwd_radius="10dp"
                app:icv_et_text_color="#000000"
                app:icv_et_width="50dp"></app.gds.one.utils.customview.VerificationCodeView>

        </LinearLayout>


        <!--下一步-->
        <LinearLayout
            android:id="@+id/layout_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            >

            <Button
                android:id="@+id/password_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg_cccccc_reid5"
                android:gravity="center"
                android:text="@string/next"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>